--- a/Athena.software/Code/css/aboutme.css
+++ b/Athena.software/Code/css/aboutme.css
@@ -1,80 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Geo&display=swap');
-
-body,
-html {
-  font-family: 'Geo', sans-serif;
+body {
+  background-color: #111111;
   margin: 0;
-  box-sizing: border-box;
-  background-color: #000000;
-  text-emphasis-color: #ffffff;
-  text-align: center;
-  color: #ffffff
+  overflow-x: hidden;
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
+.bg {
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  right: -50%;
+  bottom: -50%;
+  width: 200%;
+  height: 200vh;
+  background: transparent url('http://assets.iceable.com/img/noise-transparent.png') repeat 0 0;
+  background-repeat: repeat;
+  animation: bg-animation .2s infinite;
+  opacity: .9;
+  visibility: visible;
 }
 
-.column {
-  float: left;
-  width: 33.3%;
-  margin-bottom: 16px;
-  padding: 0 8px;
-}
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin-top: 0%;
-  margin-right: 25%;
-  margin-bottom: 0%;
-  margin-left: 25%;
-}
-
-.about-section {
-  padding: 50px;
-  text-align: center;
-  background-color: #0d0d0d;
-  color: white;
-  border-radius: 50px 50px 50px 50px;
-}
-
-.container {
-  padding: 0 16px;
-}
-
-.container::after,
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.title {
-  color: grey;
-}
-
-.button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  border-radius: 5px 5px 5px 5px;
-}
-
-.button:hover {
-  background-color: #555;
-}
-
-@media screen and (max-width: 650px) {
-  .column {
-    width: 100%;
-    display: block;
-  }
+@keyframes bg-animation {
+    0% { transform: translate(0,0) }
+    10% { transform: translate(-5%,-5%) }
+    20% { transform: translate(-10%,5%) }
+    30% { transform: translate(5%,-10%) }
+    40% { transform: translate(-5%,15%) }
+    50% { transform: translate(-10%,5%) }
+    60% { transform: translate(15%,0) }
+    70% { transform: translate(0,10%) }
+    80% { transform: translate(-15%,0) }
+    90% { transform: translate(10%,5%) }
+    100% { transform: translate(5%,0) }
 }
